RESOLVED FIXED 285463
REGRESSION (288222@main): Cannot scroll the Santa Clara Property Tax Payment website
https://bugs.webkit.org/show_bug.cgi?id=285463
Summary REGRESSION (288222@main): Cannot scroll the Santa Clara Property Tax Payment ...
alan
Reported 2025-01-06 13:29:04 PST
Attachments
[fast-cq]Patch (5.36 KB, patch)
2025-01-06 13:36 PST, alan
no flags
alan
Comment 1 2025-01-06 13:36:59 PST
Created attachment 473810 [details] [fast-cq]Patch
EWS
Comment 2 2025-01-07 05:23:59 PST
Committed 288521@main (7dd857b4bcbc): <https://commits.webkit.org/288521@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 473810 [details].
Note You need to log in before you can comment on or make changes to this bug.