REGRESSION (288222@main): Cannot scroll the Santa Clara Property Tax Payment website https://bugs.webkit.org/show_bug.cgi?id=285463 <rdar://142420869>

Reviewed by Antti Koivisto.

The "allow precent resolve" logic introduced in 288222@main missed the special, after layout adjustment when scrollbar is present.
This change ensures that when we run layout on flex content _after_ flex layout, we still honor the override height value and let precent resolve happen.

* LayoutTests/fast/flexbox/percent-height-flex-content-with-space-taking-scrollbar-expected.html: Added.
* LayoutTests/fast/flexbox/percent-height-flex-content-with-space-taking-scrollbar.html: Added.
* Source/WebCore/rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::layoutBlock):
(WebCore::RenderFlexibleBox::canUseFlexItemForPercentageResolution):
* Source/WebCore/rendering/RenderFlexibleBox.h:

Canonical link: https://commits.webkit.org/288521@main